dist/1.0/bin/sample/retrieveUnpackaged/objects/Service_Tariff__c.object
<CustomObject>
    <description>Tariffs configured for Service Bundle</description>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <description>ID Of the Tariff in CSR Database</description>
        <externalId>true</externalId>
        <inlineHelpText>ID Of the Tariff in CSR Database</inlineHelpText>
        <label>CSR ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Point__c</fullName>
        <description>Indicates, whether the Tariff is for Incoming, Outgoing or Redirected traffic</description>
        <inlineHelpText>Indicates, whether the Tariff is for Incoming, Outgoing or Redirected traffic</inlineHelpText>
        <label>Connection Point</label>
        <picklist>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REDIR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Relation to Service Bundle, under which the Tariff was configured</description>
        <inlineHelpText>Relation to Service Bundle, under which the Tariff was configured</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Service Tariffs</relationshipLabel>
        <relationshipName>Service_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Component__c</fullName>
        <description>Relation to Service Component, under which the Tariff was configured</description>
        <inlineHelpText>Relation to Service Component, under which the Tariff was configured</inlineHelpText>
        <label>Service Component</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Service Tariffs</relationshipLabel>
        <relationshipName>Service_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_ID__c</fullName>
        <description>ID from source system used during migration process</description>
        <externalId>true</externalId>
        <inlineHelpText>ID from source system used during migration process</inlineHelpText>
        <label>Source Record ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tariff__c</fullName>
        <description>Relation to Tariff Definition</description>
        <inlineHelpText>Relation to Tariff Definition</inlineHelpText>
        <label>Tariff</label>
        <referenceTo>Tariff__c</referenceTo>
        <relationshipLabel>Service Tariffs</relationshipLabel>
        <relationshipName>Service_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Tariff</label>
    <nameField>
        <displayFormat>STA{000000000}</displayFormat>
        <label>Service Tariff</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Tariffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>